[tool.poetry]
name = "lemon"
version = "1.0.0"
description = "A CHIP-8 emulator written in Python."
authors = ["hachi79 <80042274+hachi79@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.2.0"
mkdocs = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
